--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/documentation.html
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/documentation.html
@@ -382,7 +382,7 @@ $subject = 'Contact Form : Titan - The best downloaded template ever';</pre>
                 <h4>If Contact form form not working</h4>
                 <p>You need to check is PHP mail() function working.</p>
                 <p>
-                  <textarea rows="4" style="width:100%; text-transform: lowercase;"><?php
+                  <textarea rows="4" style="width:100%;  : lowercase;"><?php
 mail('you@yourmail.com','Test mail','The mail function is working!');
 echo 'Mail sent!';
 ?></textarea>
